--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -3,11 +3,12 @@
     <a (click)="toggleSidebar()" href="#" class="sidebar-toggle">
       <nb-icon icon="menu-2-outline"></nb-icon>
     </a>
-    <a class="logo" href="#" (click)="navigateHome()">ngx-<span>admin</span></a>
+    <!--<a class="logo" href="#" (click)="navigateHome()">ngx-<span>admin</span></a>-->
+    <div class="logo" (click)="navigateHome()">Hinawi-2020<span style="color: #00b3ff"> {{companyName}}</span></div>
   </div>
-  <nb-select [selected]="currentTheme" (selectedChange)="changeTheme($event)" status="primary">
-    <nb-option *ngFor="let theme of themes" [value]="theme.value"> {{ theme.name }}</nb-option>
-  </nb-select>
+  <!--<nb-select [selected]="currentTheme" (selectedChange)="changeTheme($event)" status="primary">-->
+    <!--<nb-option *ngFor="let theme of themes" [value]="theme.value"> {{ theme.name }}</nb-option>-->
+  <!--</nb-select>-->
 </div>
 
 <div class="header-container">
