--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -9,6 +9,9 @@
   <!--<nb-select [selected]="currentTheme" (selectedChange)="changeTheme($event)" status="primary">-->
     <!--<nb-option *ngFor="let theme of themes" [value]="theme.value"> {{ theme.name }}</nb-option>-->
   <!--</nb-select>-->
+
+  <simple-notifications [options]="options"></simple-notifications>
+
 </div>
 
 <div class="header-container">
